# qml-2d-template

./: CMakeLists.txt  LICENSE.md  README.md  qml-2d-template.pri  qml-2d-template.pro  template2d.pri  template2d.pro
demo/: canvas2d.h  main.cpp
dependencies/: CMakeLists.txt
examples/: canvas2d.cpp  canvas2d.h  main.cpp
include/model/: model.h
res/qml/: main.qml
src/: model.cpp
